[fix]overflow

--- a/client/src/Components/Home/travel.css
+++ b/client/src/Components/Home/travel.css
@@ -35,6 +35,7 @@
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     margin-bottom: 2em;
+    overflow: hidden;
 }
 
 .travelCard_img img {
